log/build_2025-04-01_10-42-37/sensor_management/stderr.log
  File "/home/kvothe/ros/install/sensor_management/lib/python3.10/site-packages/sensor_management/fusion.py", line 112
    P[0, 0], P[0, 1], 0.0 0.0 0.0, P[0, 2],
                      ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

